plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'eclipse'
    id 'com.diffplug.spotless' version '6.25.0'
}

repositories {
    // Use the Maven Central repository for resolving dependencies.
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.11'
}

tasks.test {
    useJUnit()
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    mainClass = 'de.uni_hamburg.informatik.swt.se2.mediathek.startup.StartUpMediathek_Blatt06'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


spotless {
    java {
        toggleOffOn()

        eclipse().configFile("${project.rootDir}/tools/SE2Format.xml")
    }
}
